# car

./: .eslintrc.json  .gitignore  README.md  camera_calibrations.json  cv3_install.sh  path_view.ods  route_view.ods  routes.json  use_lcd
CommandLineInterpreter/: CommandLineInterpreter.ino
blue/: CarMessages.h  CommandInterpreter.h  EventQueue.h  Fsm.h  Logger.cpp  Logger.h  Main.cpp  ManualMode.cpp  ManualMode.h  Mpu9150.h  RxEvent.cpp
car_control/: car_control.h  car_control.ino  mpu9150.h  mpu9150_raw_example.h  ping.h
cpp/: .gitignore  CMakeLists.txt  README.md  ackerman.cpp  ackerman.h  async-buf.h  async_buf.h  camera.cpp  camera.h  car-controller.cpp  car-controller.h  car-service.pro  car.cpp  car.h  car_controller.cpp  car_controller.h  car_menu.cpp  car_menu.h  car_ui.cpp  car_ui.h  config.cpp  config.h  console_menu.cpp  console_menu.h  diagnostics.cpp  diagnostics.h  driver.cpp  driver.h  dynamics.cpp  dynamics.h  ends_with.h  fake-car.cpp  fake-car.h  fake_car.cpp  fake_car.h  file-names.cpp  file_names.cpp  file_names.h  filenames.h  frame-grabber.cpp  (+62 more)
cpp/calibration/: calibration.cpp  calibration.pro  main.cpp
cpp/car-gui/: README.md  camera_window.cpp  camera_window.h  camera_window.ui  car-gui.pro  lidar_window.cpp  lidar_window.h  lidar_window.ui  main.cpp  main_window.cpp  main_window.h  main_window.ui  picker_window.cpp  picker_window.h  picker_window.ui  route_window.cpp  route_window.h  route_window.ui  stereo_window.cpp  stereo_window.h  stereo_window.ui
cpp/car-service/: ackerman.cpp  ackerman.h  car-service.pro  car.cpp  car.h  config.cpp  dynamics.cpp  dynamics.h  fake_car.cpp  geometry.h  glob_util.h  main.cpp  split.h  usb.cpp  usb.h  work_queue.cpp  work_queue.h
cpp/debug/: moc_camera_window.cpp  moc_lidar_window.cpp  moc_picker_window.cpp  moc_predefs.h  moc_route_window.cpp  moc_stereo_window.cpp  qrc_resources.cpp  ui_camera_window.h  ui_lidar_window.h  ui_picker_window.h  ui_route_window.h  ui_stereo_window.h
cpp/lidar/: CMakeCache.txt  CMakeLists.txt  Lidar Corners.ipynb  Makefile  car-log.txt  cmake_install.cmake  lidar  lidar.cpp  lidar.h  main.cpp  recording.csv
cpp/lidar/lidar_gui/: lidar_gui.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
cpp/stereo/: CMakeLists.txt  stereo.cpp
cpp/unit-tests/: CMakeLists.txt  Makefile  ackerman_test.cpp  ackerman_tests.cpp  async_buf_tests.cpp  car_messages_tests.cpp  geometry_tests.cpp  main.cpp  route_tests.cpp  string_utils_tests.cpp  unit-tests.pro  work_queue_test.cpp  work_queue_tests.cpp
docs/: TODO.md
(+838 files in other folders)
